--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,28 @@
-Source: template-repository
-Section: unknown
+Source: u-boot-menu
+Section: admin
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Standards-Version: 4.6.1
+Vcs-Git: https://salsa.debian.org/debian/u-boot-menu.git
+Vcs-Browser: https://salsa.debian.org/debian/u-boot-menu
+Homepage: https://github.com/suihkulokki/u-boot-menu
+Maintainer: Jonas Smedegaard <dr@jones.dk>
+Uploaders: Vagrant Cascadian <vagrant@debian.org>
+Build-Depends:
+ debhelper-compat (= 13),
+Rules-Requires-Root: no
 
-Package: template-repository
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Package: u-boot-menu
+Depends:
+ linux-base,
+ ${misc:Depends},
+Suggests:
+ flash-kernel,
+Architecture: all
+Multi-Arch: foreign
+Description: u-boot menu update
+ Automatically create extlinux-style boot menu for u-boot. Boot menu
+ entries are automatically created for every kernel package when they are
+ installed.
+ .
+ When /boot is on a separate partition, the package flash-kernel may help
+ ensure that device-tree (dtb) files are made available to u-boot.
